# QML_TodoApp

./: CMakeLists.txt  Images.qrc  Main.qml  README.md  backendhelper.cpp  backendhelper.h  main.cpp
Utils/: AppPopup.qml  CustomScrollbar.qml  CustomTextField.qml  EditPopup.qml
